properly fixed overflow on mobile this time

--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,17 @@ text-decoration: none;
   word-spacing: 1.1px;
 }
 
+.bodyWrapper{
+  overflow: hidden;
+}
+
 section {
   background: radial-gradient(
     circle,
     rgba(250, 250, 250, 1) 0%,
     rgba(210, 210, 210, 1) 100%
   );
-  overflow: hidden;
+
 
   border: 1px solid var(--blue);
 }
@@ -43,7 +47,7 @@ section {
 html {
   background: url("/src/assets/statsbackground.jpg") fixed;
   background-position-y: 1000px;
-  
+
 }
 
 
@@ -134,6 +138,7 @@ nav > img {
   height: 100vh;
   max-height: 1200px;
   min-height: 620px;
+  
 }
 
 .homesvg {
@@ -403,6 +408,7 @@ CAROUSEL
 
 #projects {
   height: fit-content;
+  overflow-x: hidden;
 }
 
 .carousel {
@@ -878,6 +884,7 @@ MAIL MODAL
   opacity: 0;
   transition: all 500ms;
   z-index: -1 ;
+ 
   
 }
 
@@ -890,7 +897,7 @@ MAIL MODAL
   fill: white;
   cursor: pointer;
   transition: all 500ms;
-  transform: translateX(80px) ;
+  transform: translatex(80px) ;
 }
 
 .modal > svg:hover {
@@ -906,7 +913,7 @@ MAIL MODAL
 .modal__open .modal__left,
 .modal__open .modal__right,
 .modal__open .modal > svg {
-  transform: translateX(0);
+  transform: translatex(0);
   visibility: visible;
   opacity: 1;
 }
@@ -938,7 +945,7 @@ MAIL MODAL
   display: flex;
   flex-direction: column;
   border-radius: 0px 20px 20px 0px;
-  transform: translateX(80px) ; 
+  transform: translatex(80px) ; 
  
 }
 
@@ -946,7 +953,7 @@ MAIL MODAL
   color: black;
   background-color: white;
   border-radius: 20px 0px 0px 20px;
-  transform: translateX(-80px);
+  transform: translatex(-80px);
  
 }
 
